--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,7 +1,77 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  color: red;
+  font-family: "Lato", sans-serif;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 0.5fr 3fr 0.3fr;
+  grid-template-areas:
+    "nav"
+    "main"
+    "footer";
+
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 12px;
+  color: white;
+  text-align: center;
+  height: 100vh;
+  background: url("../assets/bgImg_mobile.jpg") no-repeat center center/cover;
+}
+
+nav {
+  background-color: whitesmoke;
+}
+
+footer {
+  //   background-color: black;
+}
+
+nav {
+  grid-area: nav;
+}
+main {
+  grid-area: main;
+}
+
+footer {
+  grid-area: footer;
+}
+nav #logo {
+  width: 200px;
+  padding-top: 10px;
+}
+main {
+  display: grid;
+  // grid-auto-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-areas:
+    "."
+    "flight-btn"
+    ".";
+}
+#find-flights-btn {
+  grid-area: flight-btn;
+  justify-self: center;
+  margin-top: 55px;
+  width: 150px;
+  height: 60px;
+  background: transparent;
+  border: solid 2px white;
+  box-shadow: 0 0 3px black;
+  transition: 0.3s;
+  color: white;
+  border-radius: 10px;
+  font-size: large;
+}
+#find-flights-btn:hover {
+  background-color: white;
+  color: black;
 }
