--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -65,7 +65,7 @@ main {
 #modal {
   width: 300px;
   height: 300px;
-  background-color: white;
+  background-color: rgb(0, 0, 0);
   overflow: auto;
   margin-top: 30px;
   grid-area: table;
@@ -76,16 +76,17 @@ main {
 }
 
 .modal-content {
-  color: black;
+  color: rgb(255, 255, 255);
 }
 
 #pikachu-loading-gif {
   display: block;
+  margin-top:80px;
 }
 
 #pikachu-loading-gif img {
-  width: 50px;
-  height: 50px;
+  width: 70px;
+  height: 70px;
 }
 
 #pikachu-loading-gif.hidePikachu {
@@ -107,7 +108,7 @@ table {
   }
 
   tr:nth-child(even) {
-    background-color: rgb(77, 235, 200);
+    background-color: rgb(18, 83, 79);
   }
   tbody {
     display: block;
