--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,11 @@
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
+
+
 $nav_footer-bg-color: black;
-$nav-footer_shadow: 1px 0 5px grey;
+$nav-footer_shadow: 0px 0.5px 0px grey;
 
 * {
   box-sizing: border-box;
@@ -32,11 +38,14 @@ body {
 nav {
   background-color: $nav_footer-bg-color;
   box-shadow: $nav-footer_shadow;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 footer {
   background-color: $nav_footer-bg-color;
-  box-shadow: $nav-footer_shadow;
+  // box-shadow: $nav-footer_shadow;
   .copyright-text {
     padding-top: 20px;
   }
@@ -60,6 +69,10 @@ main {
   display: grid;
   grid-template-rows: 1fr;
   grid-template-areas: "table";
+}
+#search-input{
+  color: black;
+  margin-top: 15px;
 }
 
 #modal {
@@ -176,6 +189,7 @@ table {
 // Desktop media query
 @media only screen and (min-width: 1024px) {
   .container {
+    display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 0.3fr 3fr 0.3fr;
     grid-template-areas:
