--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -30,7 +30,7 @@ body {
   color: white;
   text-align: center;
   height: 100dvh;
-  background: url("../assets/map3.jpg") no-repeat center center/cover;
+  background: url("../assets/map3.webp") no-repeat center center/cover;
 }
 
 nav {
